# EEE882-TP1

./: .gitignore  README.md  pyproject.toml
codigo/: n_rainhas.py  plot_n_rainhas.py  plot_rastrigin.py  plot_rastrigin_de.py  plot_rastrigin_pso.py  plot_tsp_de.py  plot_tsp_ga.py  plot_tsp_pso.py  rastrigin.py  rastrigin_de.py  rastrigin_pso.py  tsp_de.py  tsp_ga.py  tsp_pso.py
