[project]
name = "eee882-tp1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
]

[project.scripts]
rastrigin = "codigo.rastrigin:main"
n_rainhas = "codigo.n_rainhas:main"
plot_rastrigin = "codigo.plot_rastrigin:main"
plot_n_rainhas = "codigo.plot_n_rainhas:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codigo"]
